# outram-park

./: .gitignore  Cargo.toml  README.md
presentations/: AI Generated Outline Draft 1.odt
presentations/students_and_teachers/: beamerthememidcenturymodern.sty  demo.bib  st_presentation.bcf-SAVE-ERROR  st_presentation.tex  st_presentation.toc
presentations/university_level/: demo.bib  prke.tex
